Homarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homarr-server
  namespace: homarr-server
spec:
  selector:
    app: homarr-server
  ports:
    - protocol: TCP
      port: 7575
      targetPort: 7575
